<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_64sdp"
    android:padding="@dimen/_16sdp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/song_cover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/musicicon"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="5">

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:textColor="@color/colorLighter"
            android:text="@string/hello"/>

        <TextView
            android:id="@+id/song_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/colorPrimary"
            android:text="@string/adele"/>

    </LinearLayout>

    <TextView
        android:id="@+id/options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="&#8942;"
        android:gravity="right"
        android:textStyle="bold"
        android:textColor="@color/colorLighter"
        android:textSize="@dimen/_16sdp"
        android:layout_weight="1"/>

</LinearLayout>
